force-app/main/default/objects/copado__Promotion_Pull_Request_Review__c/copado__Promotion_Pull_Request_Review__c.object-meta.xml
<CustomObject>
    <label>Promotion Pull Request Review</label>
    <nameField>
        <displayFormat>Review-{000000}</displayFormat>
        <label>Promotion Pull Request Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Pull Request Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>