force-app/main/default/objects/copado__Promotion_Pull_Request_Review__c/fields/copado__Promotion_Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>copado__Promotion_Pull_Request__c</fullName>
    <label>Promotion Pull Request</label>
    <referenceTo>copado__Promotion_Pull_Request__c</referenceTo>
    <relationshipName>Promotion_Pull_Request_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>