force-app/main/default/objects/copado__Promotion_Pull_Request_Review__c/fields/copado__Review_Action__c.field-meta.xml
<CustomField>
    <fullName>copado__Review_Action__c</fullName>
    <label>Review Action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>