force-app/main/default/objects/copado__Promotion_Pull_Request_Review__c/fields/copado__Review_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Review_Id__c</fullName>
    <externalId>true</externalId>
    <label>Review Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>